pygpu/gpuarray.pyx

cimport libc.stdio
from libc.stdlib cimport malloc, calloc, free

# This is used in a hack to silence some over-eager warnings.
cdef extern from *:
    ctypedef object slice_object "PySliceObject *"
    ctypedef char **const_char_pp "const char **"
    ctypedef char *const_char_p "const char *"

cdef extern from "stdlib.h":
    void *memcpy(void *dst, void *src, size_t n)

cimport numpy as np

from cpython cimport Py_INCREF, PyNumber_Index

np.import_array()

cdef extern from "numpy/arrayobject.h":
    object _PyArray_Empty "PyArray_Empty" (int, np.npy_intp *, np.dtype, int)

# Numpy API steals dtype references and this breaks cython
cdef object PyArray_Empty(int a, np.npy_intp *b, np.dtype c, int d):
    Py_INCREF(c)
    return _PyArray_Empty(a, b, c, d)

cdef extern from "Python.h":
    int PySlice_GetIndicesEx(slice_object slice, Py_ssize_t length,
                             Py_ssize_t *start, Py_ssize_t *stop,
                             Py_ssize_t *step,
                             Py_ssize_t *slicelength) except -1

cdef extern from "compyte/types.h":
    ctypedef struct compyte_type:
        const_char_p cluda_name
        size_t size
        size_t align
        int typecode

    enum COMPYTE_TYPES:
        GA_BOOL,
        GA_BYTE,
        GA_UBYTE,
        GA_SHORT,
        GA_USHORT,
        GA_INT,
        GA_UINT,
        GA_LONG,
        GA_ULONG,
        GA_FLOAT,
        GA_DOUBLE,
        GA_CFLOAT,
        GA_CDOUBLE,
        GA_NBASE

cdef extern from "compyte/util.h":
    int compyte_register_type(compyte_type *t, int *ret)
    size_t compyte_get_elsize(int typecode)
    compyte_type *compyte_get_type(int typecode)

cdef extern from "compyte/error.h":
    cdef enum ga_error:
        GA_NO_ERROR, GA_MEMORY_ERROR, GA_VALUE_ERROR, GA_IMPL_ERROR,
        GA_INVALID_ERROR, GA_UNSUPPORTED_ERROR, GA_SYS_ERROR, GA_RUN_ERROR

cdef extern from "compyte/buffer.h":
    ctypedef struct gpudata:
        pass
    ctypedef struct gpukernel:
        pass

    ctypedef struct compyte_buffer_ops:
        void *buffer_init(int devno, int *ret)
        char *buffer_error(void *ctx)

    cdef enum ga_usefl:
        GA_USE_CLUDA, GA_USE_SMALL, GA_USE_DOUBLE, GA_USE_COMPLEX, GA_USE_HALF

    char *Gpu_error(compyte_buffer_ops *o, void *ctx, int err)
    compyte_buffer_ops *compyte_get_ops(const_char_p) nogil

cdef extern from "compyte/kernel.h":
    ctypedef struct _GpuKernel "GpuKernel":
        gpukernel *k
        compyte_buffer_ops *ops

    int GpuKernel_init(_GpuKernel *k, compyte_buffer_ops *ops, void *ctx,
                       unsigned int count, char **strs, size_t *lens,
                       char *name, int flags)
    void GpuKernel_clear(_GpuKernel *k)
    void *GpuKernel_context(_GpuKernel *k)
    int GpuKernel_setarg(_GpuKernel *k, unsigned int index, int typecode,
                         void *arg)
    int GpuKernel_setbufarg(_GpuKernel *k, unsigned int index,
                            _GpuArray *a)
    int GpuKernel_call(_GpuKernel *, size_t n)

cdef extern from "compyte/array.h":
    ctypedef struct _GpuArray "GpuArray":
        gpudata *data
        compyte_buffer_ops *ops
        size_t offset
        size_t *dimensions
        ssize_t *strides
        unsigned int nd
        int flags
        int typecode


    cdef int GA_C_CONTIGUOUS
    cdef int GA_F_CONTIGUOUS
    cdef int GA_OWNDATA
    cdef int GA_ENSURECOPY
    cdef int GA_ALIGNED
    cdef int GA_WRITEABLE
    cdef int GA_BEHAVED
    cdef int GA_CARRAY
    cdef int GA_FARRAY

    bint GpuArray_CHKFLAGS(_GpuArray *a, int fl)
    bint GpuArray_ISONESEGMENT(_GpuArray *a)

    ctypedef enum ga_order:
        GA_ANY_ORDER, GA_C_ORDER, GA_F_ORDER

    int GpuArray_empty(_GpuArray *a, compyte_buffer_ops *ops, void *ctx,
                       int typecode, int nd, size_t *dims, ga_order ord)
    int GpuArray_fromdata(_GpuArray *a, compyte_buffer_ops *ops, gpudata *data,
                          size_t offset, int typecode, unsigned int nd, size_t *dims,
                          ssize_t *strides, int writable)
    int GpuArray_view(_GpuArray *v, _GpuArray *a)
    int GpuArray_index(_GpuArray *r, _GpuArray *a, ssize_t *starts,
                       ssize_t *stops, ssize_t *steps)

    void GpuArray_clear(_GpuArray *a)

    int GpuArray_share(_GpuArray *a, _GpuArray *b)
    void *GpuArray_context(_GpuArray *a)

    int GpuArray_move(_GpuArray *dst, _GpuArray *src)
    int GpuArray_write(_GpuArray *dst, void *src, size_t src_sz)
    int GpuArray_read(void *dst, size_t dst_sz, _GpuArray *src)
    int GpuArray_memset(_GpuArray *a, int data)

    char *GpuArray_error(_GpuArray *a, int err)

    void GpuArray_fprintf(libc.stdio.FILE *fd, _GpuArray *a)
    int GpuArray_is_c_contiguous(_GpuArray *a)
    int GpuArray_is_f_contiguous(_GpuArray *a)

cdef extern from "compyte/extension.h":
    void *compyte_get_extension(const_char_p) nogil

cdef object call_compiler_fn = None

cdef void *call_compiler_python(const_char_p src, size_t sz,
                                int *ret) with gil:
    cdef bytes res
    cdef void *buf
    cdef char *tmp
    try:
        res = call_compiler_fn(src[:sz])
        buf = malloc(len(res))
        if buf == NULL:
            if ret != NULL:
                ret[0] = GA_SYS_ERROR
            return NULL
        tmp = res
        memcpy(buf, tmp, len(res))
        return buf
    except:
        # XXX: maybe should store the exception somewhere
        if ret != NULL:
            ret[0] = GA_RUN_ERROR
        return NULL

ctypedef void *(*comp_f)(const_char_p, size_t, int*)

def set_cuda_compiler_fn(fn):
    cdef void (*set_comp)(comp_f f)
    set_comp = <void (*)(comp_f)>compyte_get_extension("cuda_set_compiler")
    if set_comp == NULL:
        raise RuntimeError("cannot set compiler, extension is absent")
    if callable(fn):
        call_compiler_fn = fn
        set_comp(call_compiler_python)
    elif fn is None:
        set_comp(NULL)
    else:
        raise ValueError("needs a callable")

import numpy

cdef dict NP_TO_TYPE = {
    np.dtype('bool'): GA_BOOL,
    np.dtype('int8'): GA_BYTE,
    np.dtype('uint8'): GA_UBYTE,
    np.dtype('int16'): GA_SHORT,
    np.dtype('uint16'): GA_USHORT,
    np.dtype('int32'): GA_INT,
    np.dtype('uint32'): GA_UINT,
    np.dtype('int64'): GA_LONG,
    np.dtype('uint64'): GA_ULONG,
    np.dtype('float32'): GA_FLOAT,
    np.dtype('float64'): GA_DOUBLE,
    np.dtype('complex64'): GA_CFLOAT,
    np.dtype('complex128'): GA_CDOUBLE,
}

cdef dict TYPE_TO_NP = dict((v, k) for k, v in NP_TO_TYPE.iteritems())

def register_dtype(np.dtype dtype, cname):
    cdef compyte_type *t
    cdef int typecode
    cdef char *tmp

    t = <compyte_type *>malloc(sizeof(compyte_type))
    if t == NULL:
        raise MemoryError("Can't allocate new type")
    tmp = <char *>malloc(len(cname)+1)
    if tmp == NULL:
        free(t)
        raise MemoryError
    memcpy(tmp, <char *>cname, len(cname)+1)
    t.size = dtype.itemsize
    t.align = dtype.alignment
    t.cluda_name = tmp
    typecode = compyte_register_type(t, NULL)
    if typecode == -1:
        free(tmp)
        free(t)
        raise RuntimeError("Could not register type")
    NP_TO_TYPE[dtype] = typecode
    TYPE_TO_NP[typecode] = dtype

cpdef int dtype_to_typecode(dtype) except -1:
    if isinstance(dtype, int):
        return dtype
    if isinstance(dtype, str):
        dtype = np.dtype(dtype)
    if isinstance(dtype, np.dtype):
        res = NP_TO_TYPE.get(dtype, None)
        if res is not None:
            return res
    raise ValueError("don't know how to convert to dtype: %s"%(dtype,))

def dtype_to_ctype(dtype):
    cdef int typecode = dtype_to_typecode(dtype)
    cdef compyte_type *t = compyte_get_type(typecode)
    if t.cluda_name == NULL:
        raise ValueError("No mapping for %s"%(dtype,))
    return t.cluda_name

cdef ga_order to_ga_order(ord) except <ga_order>-2:
    if ord == "C" or ord == "c":
        return GA_C_ORDER
    elif ord == "A" or ord == "a":
        return GA_ANY_ORDER
    elif ord == "F" or ord == "f":
        return GA_F_ORDER
    else:
        raise ValueError("Valid orders are: 'A' (any), 'C' (C), 'F' (Fortran)")

class GpuArrayException(Exception):
    def __init__(self, msg, errcode):
        Exception.__init__(self, msg)
        self.errcode = errcode

cdef bint py_CHKFLAGS(GpuArray a, int flags):
    return GpuArray_CHKFLAGS(&a.ga, flags)

cdef bint py_ISONESEGMENT(GpuArray a):
    return GpuArray_ISONESEGMENT(&a.ga)

cdef array_empty(GpuArray a, compyte_buffer_ops *ops, void *ctx, int typecode,
                 unsigned int nd, size_t *dims, ga_order ord):
    cdef int err
    err = GpuArray_empty(&a.ga, ops, ctx, typecode, nd, dims, ord)
    if err != GA_NO_ERROR:
        raise GpuArrayException(GpuArray_error(&a.ga, err), err)

cdef array_fromdata(GpuArray a, compyte_buffer_ops *ops, gpudata *data, size_t offset,
                    int typecode, unsigned int nd, size_t *dims,
                    ssize_t *strides, int writeable):
    cdef int err
    err = GpuArray_fromdata(&a.ga, ops, data, offset, typecode, nd, dims,
                            strides, writeable)
    if err != GA_NO_ERROR:
        raise GpuArrayException(GpuArray_error(&a.ga, err), err)

cdef array_view(GpuArray v, GpuArray a):
    cdef int err
    err = GpuArray_view(&v.ga, &a.ga)
    if err != GA_NO_ERROR:
        raise GpuArrayException(GpuArray_error(&a.ga, err), err)

cdef array_index(GpuArray r, GpuArray a, ssize_t *starts, ssize_t *stops,
                 ssize_t *steps):
    cdef int err
    err = GpuArray_index(&r.ga, &a.ga, starts, stops, steps)
    if err != GA_NO_ERROR:
        raise GpuArrayException(GpuArray_error(&a.ga, err), err)

cdef array_clear(GpuArray a):
    GpuArray_clear(&a.ga)

cdef bint array_share(GpuArray a, GpuArray b):
    return GpuArray_share(&a.ga, &b.ga)

cdef void *array_context(GpuArray a):
    return GpuArray_context(&a.ga)

cdef array_move(GpuArray a, GpuArray src):
    cdef int err
    err = GpuArray_move(&a.ga, &src.ga)
    if err != GA_NO_ERROR:
        raise GpuArrayException(GpuArray_error(&a.ga, err), err)

cdef array_write(GpuArray a, void *src, size_t sz):
    cdef int err
    err = GpuArray_write(&a.ga, src, sz)
    if err != GA_NO_ERROR:
        raise GpuArrayException(GpuArray_error(&a.ga, err), err)

cdef array_read(void *dst, size_t sz, GpuArray src):
    cdef int err
    err = GpuArray_read(dst, sz, &src.ga)
    if err != GA_NO_ERROR:
        raise GpuArrayException(GpuArray_error(&src.ga, err), err)

cdef array_memset(GpuArray a, int data):
    cdef int err
    err = GpuArray_memset(&a.ga, data)
    if err != GA_NO_ERROR:
        raise GpuArrayException(GpuArray_error(&a.ga, err), err)

cdef const_char_p kernel_error(GpuKernel k, int err):
    return Gpu_error(k.k.ops, kernel_context(k), err)

cdef kernel_init(GpuKernel k, compyte_buffer_ops *ops, void *ctx,
                 unsigned int count, const_char_pp strs, size_t *len,
                 char *name, int flags):
    cdef int err
    err = GpuKernel_init(&k.k, ops, ctx, count, strs, len, name, flags)
    if err != GA_NO_ERROR:
        raise GpuArrayException(Gpu_error(ops, kernel_context(k), err), err)

cdef kernel_clear(GpuKernel k):
    GpuKernel_clear(&k.k)

cdef void *kernel_context(GpuKernel k):
    return GpuKernel_context(&k.k)

cdef kernel_setarg(GpuKernel k, unsigned int index, int typecode, void *arg):
    cdef int err
    err = GpuKernel_setarg(&k.k, index, typecode, arg)
    if err != GA_NO_ERROR:
        raise GpuArrayException(kernel_error(k, err), err)

cdef kernel_setbufarg(GpuKernel k, unsigned int index, GpuArray a):
    cdef int err
    err = GpuKernel_setbufarg(&k.k, index, &a.ga)
    if err != GA_NO_ERROR:
        raise GpuArrayException(kernel_error(k, err), err)

cdef kernel_call(GpuKernel k, size_t n):
    cdef int err
    err = GpuKernel_call(&k.k, n)
    if err != GA_NO_ERROR:
        raise GpuArrayException(kernel_error(k, err), err)
